implementado parametros pelo cfg e funcao digital output no main

--- a/server_donnie.cfg
+++ b/server_donnie.cfg
@@ -1,10 +1,17 @@
 
 driver
 (
-  name "donnie"
-  plugin "/opt/player-stage/src/player-3.0.2/build/examples/plugins/donnie/libdonnie.so"
-  provides ["dio:0" "ranger:0" "neck:::position2d:0" "base:::position2d:1" "bumper:0" "power:0"]
+	name "donnie"
+	plugin "/opt/player-stage/src/player-3.0.2/build/examples/plugins/donnie/libdonnie.so"
+	provides ["dio:0" "ranger:0" "neck:::position2d:0" "base:::position2d:1" "bumper:0" "power:0"]
 
-  port "/dev/ttyACM0"
+	port "/dev/ttyACM0"
+
+	pid_kp 1
+	pid_ki 0
+	pid_kd 0
+	pid_setpoint 5 	#valor de ticks que a gente quer controlar o PID. o "padrão", o nosso 100%
+	pid_offset_r 3
+	pid_offset_l -3
 )
 
