--- a/server_donnie.cfg
+++ b/server_donnie.cfg
@@ -5,7 +5,8 @@ driver
 	plugin "/opt/player-stage/src/player-3.0.2/build/examples/plugins/donnie/libdonnie.so"
 	provides ["dio:0" "ranger:0" "neck:::position2d:0" "base:::position2d:1" "bumper:0" "power:0"]
 
-	port "/dev/ttyACM0"
+	#port "/dev/ttyACM0" #pc
+	port "/dev/ttyAMA0" #rasp	
 
 	pid_kp 1
 	pid_ki 0
