--- a/donnie.cfg
+++ b/donnie.cfg
@@ -2,7 +2,7 @@
 driver
 (
 	name "donnie"
-	plugin "/opt/player-stage/src/player-3.0.2/build/examples/plugins/donnie/libdonnie.so"
+	plugin "libdonnie"
 	provides ["dio:0" "ranger:0" "neck:::position2d:0" "base:::position2d:1" "bumper:0" "power:0"]
 
 	port "/dev/ttyACM0" #pc
@@ -14,5 +14,7 @@ driver
 	pid_setpoint 5 	#valor de ticks que a gente quer controlar o PID. o "padrão", o nosso 100%
 	pid_offset_r 3
 	pid_offset_l -3
+
+	odom_offset 0.053 #measured_distance - desired_distance = odom_offset
 )
 
