--- a/server_donnie.cfg
+++ b/server_donnie.cfg
@@ -3,7 +3,7 @@ driver
 (
 	name "donnie"
 	plugin "libdonnie"
-	provides ["dio:0" "ranger:0" "neck:::position2d:0" "base:::position2d:1" "bumper:0" "power:0"]
+	provides ["dio:0" "ranger:0" "neck:::position2d:0" "base:::position2d:1" "bumper:0" "power:0" "beep:0"]
 
 	port "/dev/ttyACM0" #pc
 	#port "/dev/ttyAMA0" #rasp	
